--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
 		</ul>
 		</div>
 	</div>
-	<img src="C:\Users\admin\Downloads\1736681700464.webp">
+	<img src="1736681700464.webp" alt="image 0">
 </div>
 
 <div class="photos">
 	<div class="text">
 		<p01>Фотографии из моей жизни:</p01>
 	</div>
-	<img src="C:\Users\admin\Downloads\1736681700339.jpg">
-	<img src="C:\Users\admin\Downloads\1736681700645.jpg">
-	<img src="C:\Users\admin\Downloads\1738599502317.jpg">
-	<img src="C:\Users\admin\Downloads\1738599502335.jpg">
-	<img src="C:\Users\admin\Downloads\1738599502301.jpg">
-	<img src="C:\Users\admin\Downloads\1738599502283.jpg">
+	<img src="1736681700339.jpg" alt="image 1">
+	<img src="1736681700645.jpg" alt="image 2">
+	<img src="1738599502317.jpg" alt="image 3">
+	<img src="1738599502335.jpg" alt="image 4">
+	<img src="1738599502301.jpg" alt="image 5">
+	<img src="1738599502283.jpg" alt="image 6">
 </div>
 
 </body>
